@@ -1,11 +1,9 @@
-AC_INIT(mbuffer.c)
-AC_CONFIG_HEADER(config.h)
+AC_INIT([mbuffer],[20141125])
+AC_CONFIG_HEADER([config.h])
+AC_CONFIG_SRCDIR([mbuffer.c])
 
 AC_CANONICAL_SYSTEM
 AC_EXEEXT
-
-PACKAGE=mbuffer
-VERSION=20140310
 
 if test "${LD_LIBRARY_PATH}" != "" ; then
 	echo ""
@@ -87,14 +85,14 @@ AC_CHECK_LIB(pthread, pthread_mutex_init)
 AC_SEARCH_LIBS(clock_gettime,rt,,AC_MSG_ERROR(could not find the library containing clock_gettime!))
 AC_SEARCH_LIBS(sem_init,rt posix,,AC_MSG_ERROR(could not find semaphore functions!))
 AC_SEARCH_LIBS(rint,m,,AC_MSG_ERROR(unable to find rint))
-AC_SEARCH_LIBS(seteuid,c,AC_DEFINE(HAVE_SETEUID),)
-AC_SEARCH_LIBS(atoll,c,,AC_DEFINE_UNQUOTED(atoll,atol))
-AC_SEARCH_LIBS(hstrerror,resolv socket nsl,AC_DEFINE(HAVE_HSTRERROR),)
-AC_SEARCH_LIBS(getaddrinfo,resolv socket nsl,AC_DEFINE(HAVE_GETADDRINFO),)
+AC_SEARCH_LIBS(seteuid,c,AC_DEFINE([HAVE_SETEUID], [1], [Define to 1 if you have the seteuid() function]),)
+AC_SEARCH_LIBS(atoll,c,,AC_DEFINE([atoll],[atol],[Define to 1 if you do not have the atoll() function to use atol() instead]))
+AC_SEARCH_LIBS(hstrerror,resolv socket nsl,AC_DEFINE([HAVE_HSTRERROR], [1], [Define to 1 if you have the hstrerror() function]),)
+AC_SEARCH_LIBS(getaddrinfo,resolv socket nsl,AC_DEFINE([HAVE_GETADDRINFO], [1], [Define to 1 if you have the getaddrinfo() function]),)
 AC_SEARCH_LIBS(socket,socket,,AC_MSG_ERROR(could not find the library containing network functions!))
 AC_SEARCH_LIBS(gethostbyname,nsl,,AC_MSG_ERROR(could not find the library containing name convertion functions!))
-AC_SEARCH_LIBS(sendfile,sendfile,AC_DEFINE(HAVE_SENDFILE,1,libsendfile is available),)
-AC_CHECK_HEADER(sys/sendfile.h,AC_DEFINE(HAVE_SENDFILE_H,1,sendfile in sendfile.h),)
+AC_SEARCH_LIBS(sendfile,sendfile,AC_DEFINE([HAVE_SENDFILE],[1],[libsendfile is available]),)
+AC_CHECK_HEADER(sys/sendfile.h,AC_DEFINE([HAVE_SENDFILE_H],[1],[sendfile in sendfile.h]),)
 AC_FUNC_ALLOCA
 
 
@@ -103,7 +101,7 @@ AC_ARG_ENABLE(debug,
         ,enable_debug=yes
         )
 if test x$enable_debug = xyes ; then
-	AC_DEFINE_UNQUOTED(DEBUG)
+	AC_DEFINE([DEBUG], [1], [Define to 1 to build in debugging mode])
 fi
 
 AC_ARG_ENABLE(md5,
@@ -111,9 +109,9 @@ AC_ARG_ENABLE(md5,
 	,enable_md5=auto
 	)
 if test x$enable_md5 != xno ; then
-	AC_SEARCH_LIBS(mhash_init,mhash,AC_DEFINE_UNQUOTED(HAVE_LIBMHASH),
-	AC_SEARCH_LIBS(MD5Init,md5,AC_DEFINE_UNQUOTED(HAVE_LIBMD5),
-	AC_SEARCH_LIBS(MD5_Init,crypto,AC_DEFINE_UNQUOTED(HAVE_LIBCRYPTO),
+	AC_SEARCH_LIBS(mhash_init,mhash,AC_DEFINE([HAVE_LIBMHASH], [1], [Define to 1 if you have the mhash library]),
+	AC_SEARCH_LIBS(MD5Init,md5,AC_DEFINE([HAVE_LIBMD5], [1], [Define to 1 if you have the md5 library]),
+	AC_SEARCH_LIBS(MD5_Init,crypto,AC_DEFINE([HAVE_LIBCRYPTO], [1], [Define to 1 if you have the OpenSSL crypto library]),
 		if test x$enable_md5 = xauto ; then
 			AC_MSG_WARN(could not find a library containing the md5 hash functions - md5 support disabled)
 		else
@@ -123,10 +121,6 @@ if test x$enable_md5 != xno ; then
 fi
 
 AC_SUBST(DEBUG)
-AC_DEFINE_UNQUOTED(PACKAGE,"${PACKAGE}")
-AC_DEFINE_UNQUOTED(VERSION,"${VERSION}")
-AC_SUBST(PACKAGE)
-AC_SUBST(VERSION)
 AC_SUBST(prefix)
 AC_SUBST(AUTOCONF)
 AC_DEFINE(_REENTRANT,1,Needed for thread safe compilation)
